# DataMatrix

./: Cargo.toml  README.md  dfx.json  package-lock.json  test_runner.sh
src/backend/: Cargo.toml  backend.did
src/backend/src/: lib.rs  marketplace.rs  marketplace_storage.rs  marketplace_types.rs  nft.rs  nft_impl.rs  storage.rs  types.rs  upload.rs  validation.rs  wallet_storage.rs  wallet_types.rs
src/backend/test/: integration_tests.rs
src/backend/tests/: integration_tests.rs
src/frontend/: main.tsx  package.json
src/frontend/src/: App.tsx
src/frontend/src/components/: Layout.tsx  Sidebar.tsx  index.ts
src/frontend/src/data/: mockData.ts
src/frontend/src/pages/: CollectionPage.tsx  HomePage.tsx  index.ts  index.tsx
tests/: integration_tests.rs  minting_integration_test.sh  run_all_test.sh  test_config.sh  upload_validation_test.sh
tests/results/: test_report_20250725_073836.md  test_report_20250725_073956.md
worker/: Cargo.toml  dfx.json  worker.did
worker/local/: canister_ids.json  network-id
worker/src/: lib.rs
