[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
ic-llm = "1.0.0"
dip721-rs = "0.1.0"       # DIP-721 NFT 표준 구현체 :contentReference[oaicite:2]{index=2}
serde = { version="1", features=["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
sha2 = "0.10"        # (메타데이터 해싱용 선택)
csv = "1.1"
once_cell = "1.21.3"