[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
ic-cdk-timers = "0.11"
ic-llm = "1.0.0"
dip721-rs = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
sha2 = "0.10"
csv = "1.1"
once_cell = "1.21.3"
ic-stable-structures = "0.6"

# 테스트 전용 의존성
[dev-dependencies]
tokio-test = "0.4"
rstest = "0.21"

# 테스트 설정
[[test]]
name = "integration_tests"
path = "../../tests/integration_tests.rs"

# 테스트 프로파일 설정
[profile.test]
opt-level = 0
debug = true
overflow-checks = true